script/test/fixtures/external-traffic-policy/output-k8s-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: front-end-tcp
  name: front-end-tcp
spec:
  externalTrafficPolicy: Local
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: front-end
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front-end
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/external-traffic-policy-default: "true"
        io.kompose.service: front-end
    spec:
      containers:
        - env:
            - name: GET_HOSTS_FROM
              value: dns
          image: gcr.io/google-samples/gb-frontend:v4
          name: front-end
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
