script/test/fixtures/external-traffic-policy/output-k8s-v2.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  clusterIP: None
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: front-end
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front-end
  template:
    metadata:
      labels:
        io.kompose.network/external-traffic-policy-default: "true"
        io.kompose.service: front-end
    spec:
      containers:
        - env:
            - name: GET_HOSTS_FROM
              value: dns
          image: gcr.io/google-samples/gb-frontend:v4
          name: front-end
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  ingressClassName: nginx
  rules:
    - host: lb
      http:
        paths:
          - backend:
              service:
                name: front-end
                port:
                  number: 80
            path: /
            pathType: Prefix
