script/test/fixtures/external-traffic-policy/output-os-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.service.expose: lb
    kompose.service.expose.ingress-class-name: nginx
    kompose.service.external-traffic-policy: local
    kompose.service.type: loadbalancer
  creationTimestamp: null
  labels:
    io.kompose.service: front-end-tcp
  name: front-end-tcp
spec:
  externalTrafficPolicy: Local
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: front-end
  type: LoadBalancer
status:
  loadBalancer: {}

---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.service.expose: lb
    kompose.service.expose.ingress-class-name: nginx
    kompose.service.external-traffic-policy: local
    kompose.service.type: loadbalancer
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  replicas: 1
  selector:
    io.kompose.service: front-end
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/external-traffic-policy-default: "true"
        io.kompose.service: front-end
    spec:
      containers:
        - env:
            - name: GET_HOSTS_FROM
              value: dns
          image: ' '
          name: front-end
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - front-end
        from:
          kind: ImageStreamTag
          name: front-end:v4
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0

---
apiVersion: v1
kind: ImageStream
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  lookupPolicy:
    local: false
  tags:
    - annotations: null
      from:
        kind: DockerImage
        name: gcr.io/google-samples/gb-frontend:v4
      generation: null
      importPolicy: {}
      name: v4
      referencePolicy:
        type: ""
status:
  dockerImageRepository: ""
