script/test/fixtures/external-traffic-policy/output-os-v2.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  clusterIP: None
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: front-end
  type: ClusterIP

---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  replicas: 1
  selector:
    io.kompose.service: front-end
  template:
    metadata:
      labels:
        io.kompose.network/external-traffic-policy-default: "true"
        io.kompose.service: front-end
    spec:
      containers:
        - env:
            - name: GET_HOSTS_FROM
              value: dns
          image: ' '
          name: front-end
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
      restartPolicy: Always
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - front-end
        from:
          kind: ImageStreamTag
          name: front-end:v4
      type: ImageChange

---
apiVersion: image.openshift.io/v1
kind: ImageStream
metadata:
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  lookupPolicy:
    local: false
  tags:
    - from:
        kind: DockerImage
        name: gcr.io/google-samples/gb-frontend:v4
      name: v4
      referencePolicy:
        type: ""

---
apiVersion: v1
kind: Route
metadata:
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  host: lb
  port:
    targetPort: 80
  to:
    kind: Service
    name: front-end
